
* docutils/parsers/rst/__init__.py

  - use "https:" scheme in PEP and RFC base link defaults.
  - Add `reporter` to `Directive` class attributes.

* docutils/parsers/rst/directives/__init__.py

  - parser_name() keeps details if converting ImportError to ValueError.

* docutils/parsers/rst/roles.py

  - Don't use mutable default values for function arguments. Fixes bug #430.

* docutils/utils/__init__.py

  - decode_path() returns `str` instance instead of `nodes.reprunicode`.
  - new function error_string() obsoletes utils.error_reporting.ErrorString.
  - class ErrorOutput moved here from docutils/utils/error_reporting.py

* docutils/utils/error_reporting.py

  - Add deprecation warning.

* docutils/writers/_html_base.py

  - Add 'html writers' to `config_section_dependencies`. Fixes bug #443.

* docutils/writers/pep_html/

  - use "https:" scheme in "python_home" URL default.

* test/DocutilsTestSupport.py

  - exception_data() returns None if no exception was raised.
  - recommonmark_wrapper only imported if upstream parser is present.

* test/test_parsers/test_rst/test_directives/test_tables.py

  - Fix bug #436: Null char valid in CSV since Python 3.11.

* tools/docutils-cli.py

  - Allow 3rd-party drop-in components for reader and parser, too.
  - Fix help output.


Release 0.18.1
==============

* docutils/nodes.py

  - Node.traverse() returns a list again to restore backwards
    compatibility. Fixes bug #431.

  - New method Node.findall(): like Node.traverse() but returns an
    iterator. Obsoletes Node.traverse().

* docutils/utils/__init__.py:

  - Fix behaviour of get_stylesheet_list(): do not look up stylesheets
    given as "stylesheet" setting. Cf. bug #434.

* docutils/writers/_html_base.py

  - Fix handling of ``footnote_backlinks==False`` (report Alan G Isaac).

* docutils/writers/html5_polyglot/math.css

  - Fix typo (bug #432).

* docutils/writers/odf_odt/__init__.py:

  - Fix spurious output with Windows (bug #350).
